# ke-pyclient

./: .gitignore  README.md  pyproject.toml
docs/: BlueBird-PMB-MP9-WP5-2025-09-23.pptx  README.md
docs/bluebirdontology/: bluebird.ttl  capacity_market_graph_patterns.yml  dayahead_graph_patterns.yml
ke_client/: __init__.py  ke_vars.py  ki_model.py
ke_client/client/: __init__.py  _client.py  _client_base.py  _ke_properties.py  _ke_request_client.py  _ki_bindings.py  _ki_exceptions.py  _ki_holder.py  _ki_utils.py  _rdf_utils.py  _rest_client.py  _split_uri.py
ke_client/client/validation/: _gp_validator.py  _simple_validator.py
ke_client/gp_ext/: __init__.py  _model.py  _semantic_utils.py  _sub_graph_utils.py
ke_client/ke_pyclient/: _client.py  _client_base.py  _ke_rest_response_errors.py  _ki_bindings.py  _ki_exceptions.py  _rdf_utils.py
ke_client/utils/: __init__.py  enum_utils.py  time_utils.py
ke_client/validation/: __init__.py  _gp_validator.py  _simple_validator.py
